gen/sourcerepo/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-sourcerepo1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/sourcerepo/v1/lib)
error[E0423]: expected value, found struct `repos::ReposActions`
   --> gen/sourcerepo/v1/lib/src/lib.rs:876:13
    |
876 |             repos::ReposActions
    |             ^^^^^^^^^^^^^^^^^^^ did you mean `repos::ReposActions { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-sourcerepo1`.

To learn more, run the command again with --verbose.
